welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:27: error: not found: type i
    setCouleurBrosse(couleurs[i])
                              ^Array1:27: error: value couleurs of type Array[java.awt.Color] does not take type parameters.
    setCouleurBrosse(couleurs[i])
                             ^